vendored_parsers/tree-sitter-liquid/grammar.js
    program: ($) =>
      seq(
        optional($.front_matter),
        repeat($._node),
      ),


    _node: ($) =>
      choice(
        $._statement,
        $.template_content,
        $.comment,
      ),

    template_content: (_) =>
      choice(
        /[^{]+|\{[^{%]/,
        '{%%',
        '{{{',
      ),

    liquid_tag: ($) =>
      seq(
        'liquid',
        repeat(
          choice(
            $._liquid_node,
            alias($.comment_liq, $.comment),
          ),
        ),
      ),

    _liquid_node: ($) =>
      seq(
        choice(
          $._expression,
          $._untagged_unpaired_statement,
          $._untagged_paired_statement,
        ),
        /(\r\n|\r|\n)/,
      ),

    _expression: ($) =>
      choice(
        $._literal,
        $.filter,
        $.identifier,
        $.predicate,
        $.access,
        output($._expression),
      ),


    // //////////////
    // Primitives //
    // //////////////

    identifier: (_) => /([a-zA-Z][0-9a-zA-Z_\?-]*)/,

    _literal: ($) => choice($.string, $.number, $.boolean),

    string: (_) =>
      choice(
        seq('\'', /[^']*/, '\''),
        seq('"', /[^"]*/, '"'),
      ),

    number: (_) => /-?\d*\.?\d+/,

    boolean: (_) => choice('true', 'false'),

    predicate: ($) =>
      choice(
        ...[
          ['+', 'binary_plus'],
          ['-', 'binary_plus'],
          ['*', 'binary_times'],
          ['/', 'binary_times'],
          ['%', 'binary_times'],
          ['^', 'binary_exp'],
          ['==', 'binary_relation'],
          ['<', 'binary_relation'],
          ['<=', 'binary_relation'],
          ['!=', 'binary_relation'],
          ['>=', 'binary_relation'],
          ['>', 'binary_relation'],
          ['and', 'clause_connective'],
          ['or', 'clause_connective'],
          ['contains', 'contains'],
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field('left', $._expression),
              field('operator', operator),
              field('right', $._expression),
            ),
          ),
        ),
      ),


    // ///////////////////////
    // Unpaired Statements //
    // ///////////////////////

    break_statement: (_) => 'break',

    echo_statement: ($) => seq('echo', $._expression),

    custom_unpaired_statement: ($) =>
      seq(
        alias($.identifier, 'custom_keyword'),
        repeat($._expression),
      ),

    assignment_statement: ($) =>
      seq(
        'assign',
        field('variable_name', $.identifier),
        '=',
        field('value', $._expression),
      ),

    cycle_statement: ($) =>
      seq(
        'cycle',
        optional(
          field('group_name', seq($.string, ':')),
        ),
        field(
          'group_item',
          seq(
            choice($.number, $.string, $.access, $.identifier),
            repeat(
              seq(',', choice($.number, $.string, $.access, $.identifier)),
            ),
          ),
        ),
      ),

    include_statement: ($) =>
      seq(
        choice(
          'include',
          'include_relative',
        ),
        choice(
          $.string,
          output($._expression),
          alias(
            // match any sequence of non-whitespace charaters that does not contain "{{" or "{%"
            /(\{[^{%\s][^{\s]*|[^{\s]+)(?:\{[^{%\s][^{\s]*)*/,
            $.string,
          ),
        ),
        repeat(
          $._include_param,
        ),
      ),

    _include_param: ($) =>
      seq(
        $.identifier,
        token.immediate('='),
        $._expression,
      ),

    render_statement: ($) =>
      seq(
        'render',
        field('file', $.string),
        optional(
          choice(
            field('arguments',
              seq(',', $.argument_list),
            ),
            field(
              'iteration',
              seq('for', $._render_param),
            ),
            field('with',
              seq('with', $._render_param),
            ),
          ),
        ),
      ),

    _render_param: ($) =>
      seq(
        $.identifier,
        optional(
          seq(
            'as',
            field('item', $.identifier),
          ),
        ),
      ),

    filter: ($) =>
      seq(
        field('body', $._expression),
        '|',
        field('name', $.identifier),
        optional(seq(':', $.argument_list)),
      ),

    access: ($) =>
      seq(
        field('receiver', choice($.access, $.identifier)),
        choice(
          seq(
            '.',
            field('property', $.identifier),
          ),
          seq(
            '[',
            field('property', choice($.number, $.string)),
            ']',
          ),
        ),
      ),

    argument_list: ($) =>
      sep1(
        choice($._literal, $.identifier, $.access, $.argument),
        ',',
      ),

    argument: ($) =>
      seq(
        field('key', $.identifier),
        ':',
        field('value', choice($._literal, $.identifier, $.access)),
      ),

    if_statement: ($) => paired($).tagged._if,

    else_clause: ($) => paired($).tagged._else,

    for_loop_statement: ($) => paired($).tagged._for_loop,

    case_statement: ($) => paired($).tagged._case,

    when_clause: ($) => paired($).tagged._when,

    capture_statement: ($) => paired($).tagged._capture,

    form_statement: ($) => paired($).tagged._form,

    tablerow_statement: ($) => paired($).tagged._tablerow,

    paginate_statement: ($) => paired($).tagged._paginate,

    // untagged
    raw_statement: ($) =>
      seq(
        tag('raw'),
        $.raw_content,
        optional($.raw_statement),
        tag('endraw'),
      ),

    comment: ($) =>
      choice($._inline_comment, $._paired_comment),

    _inline_comment: ($) =>
      tag(repeat1($._inline_comment_content)),

    _paired_comment: ($) =>
      seq(
        concealed_tag('comment'),
        $._paired_comment_content,
        optional($._paired_comment),
        concealed_tag('endcomment'),
      ),
